--- a/craft-kvass/src/sass/base/_variables.scss
+++ b/craft-kvass/src/sass/base/_variables.scss
@@ -9,11 +9,15 @@ $text-color--darker: black;
 $text-color: #404040;
 $text-color--lighter: #989898;
 $menu-text-color: white;
+$menu-text-color--active: #ffcb78;
 $header-message-color: white;
+$innovation-devider-color: #e5e5e5;
 
 $font-size: 16px;
-$font-size--small: 14px;
 $font-size--mini: 11px;
+$font-size--small: 14px;
 $font-size--h1: 70px;
-$font-size--h2: 40px;
-$font-size--h3: 40px;
+$font-size--h2-h3: 40px;
+
+$line-height--30: 30px;
+$line-height--40: 40px;
