--- a/craft-kvass/src/sass/blocks/_menu.scss
+++ b/craft-kvass/src/sass/blocks/_menu.scss
@@ -2,8 +2,33 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  border: 2px solid red;
+  float: right;
+  width: 600px;
+  border-top: 1px solid white;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   &__item {
     float: left;
+    text-transform: uppercase;
+  }
+  &__item a {
+    color: white;
+    font-weight: bold;
+    display: block;
+    margin-right: 54.46px;
+    padding-top: 14px;
+    padding-bottom: 13px;
+    text-decoration: none;
+  }
+  &__item a:hover {
+    color: $menu-text-color--active;
+    text-decoration: underline;
+  }
+  &__item a:active {
+    color: rgba(255, 203, 120, 0.6);
+  }
+  &__item:last-child a {
+    margin-right: 0;
   }
 }
