--- a/craft-kvass/src/sass/base/_variables.scss
+++ b/craft-kvass/src/sass/base/_variables.scss
@@ -1,6 +1,7 @@
 $background-color: white;
 $background-header: black;
 $background-advantage: #ffcb78;
+$background-order: #ffcb78;
 $background-press: #ede5d8;
 $background-order: #ffcb78;
 $background-footer: black;
@@ -8,16 +9,27 @@ $background-footer: black;
 $text-color--darker: black;
 $text-color: #404040;
 $text-color--lighter: #989898;
+$text-color-button: white;
+$text-color-button-more: #834700;
+$tc-price-table__title: #999999;
+$box-shadow-color-button--border: #834700;
 $menu-text-color: white;
 $menu-text-color--active: #ffcb78;
 $header-message-color: white;
 $innovation-devider-color: #e5e5e5;
+$press-color: #EDE5D8;
 
 $font-size: 16px;
-$font-size--mini: 11px;
 $font-size--small: 14px;
+$font-size--mini: 11px;
+$font-size--infinitesimal: 8px;
 $font-size--h1: 70px;
 $font-size--h2-h3: 40px;
+$font-size--20: 20px;
 
+$line-height--24: 24px;
+$line-height--20: 20px;
 $line-height--30: 30px;
 $line-height--40: 40px;
+$line-height--50: 50px;
+$line-height--61: 61px;
