--- a/craft-kvass/src/sass/blocks/_button.scss
+++ b/craft-kvass/src/sass/blocks/_button.scss
@@ -1,9 +1,21 @@
-// .btn {
-  // width: 135px;
-  // height: 45px;
-  // padding: 12px 25px 12px;
-  // background-color: $decoration-color;
-  // &_inactive {
-  //   background-color: transparent;
-  // }
-// }
+.button {
+  display: inline-block;
+  line-height: $line-height--50;
+  font-size: $font-size;
+  height: 50px;
+  width: 65px;
+  vertical-align: middle;
+  margin: 0;
+  padding: 0 22px;
+  font-weight: 400;
+  color: $text-color-button;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #834700;
+  border: none;
+  text-decoration: none;
+  &--border {
+    background-color: transparent;
+    box-shadow: 0 0 0 2px inset $box-shadow-color-button--border;
+  }
+}
