--- a/craft-kvass/src/sass/blocks/_menu.scss
+++ b/craft-kvass/src/sass/blocks/_menu.scss
@@ -3,32 +3,32 @@
   padding: 0;
   margin: 0;
   float: right;
-  width: 600px;
+  width: 602px;
   border-top: 1px solid white;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   border-bottom: 1px solid white;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   &__item {
     float: left;
-    text-transform: uppercase;
+    margin-right: 54.46px;
   }
-  &__item a {
+  &__item:last-child {
+    margin-right: 0;
+  }
+  &__link {
     color: white;
     font-weight: bold;
     display: block;
-    margin-right: 54.46px;
     padding-top: 14px;
     padding-bottom: 13px;
     text-decoration: none;
+    text-transform: uppercase;
   }
-  &__item a:hover {
+  &__link:hover {
     color: $menu-text-color--active;
     text-decoration: underline;
   }
-  &__item a:active {
+  &__link:active {
     color: rgba(255, 203, 120, 0.6);
-  }
-  &__item:last-child a {
-    margin-right: 0;
   }
 }
