--- a/craft-kvass/src/sass/style.scss
+++ b/craft-kvass/src/sass/style.scss
@@ -1,8 +1,8 @@
 // @import "libs/bootstrap-reboot.min";
 // @import url('https://fonts.cdnfonts.com/css/arial-mt?styles=48920,48930');
 
-@import "base/variables";
-@import "base/mixins";
+@import 'base/variables';
+@import 'base/mixins';
 
 * {
   font-family: 'Arial', sans-serif;
@@ -22,7 +22,8 @@ body {
 .container {
   margin: 0 auto;
   &--md {
-    max-width: 1010px;
+    max-width: 1020px;
+    // border: 1px solid red;
   }
   &--xs {
     max-width: 800px;
@@ -30,27 +31,43 @@ body {
 }
 
 .clearfix::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
 
-@import "blocks/logo";
-@import "blocks/menu";
-@import "blocks/header";
-@import "blocks/good";
-@import "blocks/title";
-@import "blocks/innovation";
+.visually-hidden,
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
 
-// @import "blocks/button";
-// @import "blocks/title";
-// @import "blocks/promo";
-// @import "blocks/sidepanel";
-// @import "blocks/hamburger";
-// @import "blocks/about";
-// @import "blocks/resume";
-// @import "blocks/skills";
-// @import "blocks/portfolio";
-// @import "blocks/price";
-// @import "blocks/contacts";
-// @import "blocks/media";
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+
+  white-space: nowrap;
+
+  border: 0;
+
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+}
+
+@import 'blocks/logo';
+@import 'blocks/menu';
+@import 'blocks/header';
+@import 'blocks/button';
+@import 'blocks/title';
+@import 'blocks/innovation';
+@import 'blocks/good';
+@import 'blocks/advantage';
+@import 'blocks/history';
+@import 'blocks/press';
+@import 'blocks/range';
+@import 'blocks/price-table';
+@import 'blocks/order';
+@import 'blocks/form';
+@import 'blocks/footer';
+@import 'blocks/social';
+@import 'blocks/copyright';
